# DogiJK

./: .gitignore  CMakeLists.txt  README.md  waf  wconstruct  wscript
base/: generate_colors.py  generate_genmat.py
base/shaders/: colorrgb.shader  colors.shader  daki.shader  dogijk.shader  egg.shader  genmat.shader
src/Ratl/: bits_vs.hh  vector_vs.hh
src/botlib/: be_aas_bspq3.cc  be_aas_cluster.cc  be_aas_debug.cc  be_aas_def.hh  be_aas_entity.cc  be_aas_file.cc  be_aas_funcs.hh  be_aas_main.cc  be_aas_main.hh  be_aas_move.cc  be_aas_optimize.cc  be_aas_reach.cc  be_aas_route.cc  be_aas_routealt.cc  be_aas_sample.cc  be_ai_char.cc  be_ai_chat.cc  be_ai_gen.cc  be_ai_goal.cc  be_ai_move.cc  be_ai_weap.cc  be_ai_weight.cc  be_ea.cc  be_interface.cc  l_crc.cc  l_libvar.cc  l_log.cc  l_memory.cc  l_precomp.cc  l_script.cc  l_struct.cc
src/cgame/: cg_consolecmds.cc  cg_cvar.cc  cg_cvar.cpp  cg_debug.cc  cg_draw.cc  cg_drawtools.cc  cg_effects.cc  cg_ents.cc  cg_event.cc  cg_event.cpp  cg_info.cc  cg_light.cc  cg_local.h  cg_local.hh  cg_localents.cc  cg_main.cc  cg_main.cpp  cg_marks.cc  cg_newDraw.cc  cg_newDraw.cpp  cg_players.cc  cg_players.cpp  cg_playerstate.cc  cg_predict.cc  cg_predict.cpp  cg_public.hh  cg_saga.cc  cg_scoreboard.cc  cg_servercmds.cc  cg_servercmds.cpp  cg_snapshot.cc  cg_spawn.cc  cg_turret.cc  cg_view.cc  cg_weaponinit.cc  cg_weapons.cc  cg_xcvar.inl  fx_blaster.cc  fx_bowcaster.cc  fx_bryarpistol.cc  (+6 more)
src/client/: FXExport.cc  FxPrimitives.cc  FxPrimitives.hh  FxScheduler.cc  FxScheduler.hh  FxSystem.cc  FxSystem.hh  FxTemplate.cc  FxUtil.cc  FxUtil.hh  cl_avi.cc  cl_cgame.cc  cl_cgameapi.cc  cl_cgameapi.cpp  cl_cin.cc  cl_console.cc  cl_input.cc  cl_input.cpp  cl_keys.cc  cl_lan.cc  cl_main.cc  cl_net_chan.cc  cl_parse.cc  cl_parse.cpp  cl_scrn.cc  cl_ui.cc  cl_uiapi.cc  cl_uiapi.cpp  client.hh  keys.hh  snd_ambient.cc  snd_ambient.hh  snd_dma.cc  snd_local.hh  snd_mem.cc  snd_mix.cc  snd_mp3.cc  snd_mp3.h  snd_mp3.hh  snd_music.cc  (+2 more)
src/game/: AnimalNPC.cc  AnimalNPC.cpp  FighterNPC.cc  NPC.cc  NPC.cpp  NPC_AI_Atst.cc  NPC_AI_Default.cc  NPC_AI_Droid.cc  NPC_AI_GalakMech.cc  NPC_AI_Grenadier.cc  NPC_AI_Howler.cc  NPC_AI_Howler.cpp  NPC_AI_ImperialProbe.cc  NPC_AI_Interrogator.cc  NPC_AI_Jedi.cc  NPC_AI_Mark1.cc  NPC_AI_Mark2.cc  NPC_AI_MineMonster.cc  NPC_AI_Rancor.cc  NPC_AI_Remote.cc  NPC_AI_SandCreature.cc  NPC_AI_Seeker.cc  NPC_AI_Sentry.cc  NPC_AI_Sniper.cc  NPC_AI_Stormtrooper.cc  NPC_AI_Utils.cc  NPC_AI_Wampa.cc  NPC_behavior.cc  NPC_combat.cc  NPC_goal.cc  NPC_misc.cc  NPC_move.cc  NPC_move.cpp  NPC_reactions.cc  NPC_senses.cc  NPC_sounds.cc  NPC_spawn.cc  NPC_spawn.cpp  NPC_stats.cc  NPC_utils.cc  (+104 more)
src/ghoul2/: G2_API.cc  G2_bolts.cc  G2_bones.cc  G2_gore.cc  G2_gore.hh  G2_misc.cc  G2_surfaces.cc  G2_trcom.cc  g2_local.hh  g2_main.cc  g2_public.hh  g2_verylocal.hh  ghoul2_shared.hh
src/icarus/: BlockStream.cc  GameInterface.cc  Instance.cc  Interface.cc  Memory.cc  Q3_Interface.cc  Q3_Registers.cc  Q3_Registers.hh  Sequence.cc  Sequencer.cc  TaskManager.cc  blockstream.hh  icarus.hh  instance.hh  interpreter.h  interpreter.hh  sequence.hh  sequencer.hh  taskmanager.hh  tokenizer.hh
src/mp3code/: cdct.cc  csbt.cc  csbt.cpp  cup.cc  cup.cpp  cupl3.cc  cupl3.cpp  cwin.cc  cwinm.cc  cwinm.cpp  hwin.cc  hwin.cpp  l3.hh  l3dq.cc  l3init.cc  l3init.cpp  mhead.cc  mhead.hh  mp3struct.hh  msis.cc  msis.cpp  towave.cc  towave.cpp  uph.cc  uph.cpp  upsf.cc  wavep.cc
src/nav/: navmap.cc  navmap.hh
src/null/: null_client.cc  null_snddma.cc
src/qcommon/: GenericParser2.cc  GenericParser2.hh  MiniHeap.hh  RoffSystem.cc  RoffSystem.hh  cm_load.cc  cm_local.hh  cm_patch.cc  cm_patch.cpp  cm_patch.hh  cm_polylib.cc  cm_polylib.hh  cm_public.hh  cm_test.cc  cm_trace.cc  cmd.cc  common.cc  common.cpp  cvar.cc  cvar.cpp  files.cc  files.cpp  game_version.hh  generic_model.hh  huffman.cc  matcomp.cc  md4.cc  md5.cc  md5.hh  models.hh  models_obj.cc  msg.cc  net_chan.cc  net_ip.cc  net_ip.cpp  persistence.cc  q_color.h  q_color.hh  q_math.c  q_math.cc  (+29 more)
src/rd-common/: mdx_format.hh  tr_common.hh  tr_font.cc  tr_font.hh  tr_image_jpg.cc  tr_image_jxl.cc  tr_image_load.cc  tr_image_png.cc  tr_image_png.cpp  tr_image_tga.cc  tr_image_webp.cc  tr_noise.cc  tr_public.hh  tr_types.hh
src/rd-dedicated/: G2_API.cc  G2_bolts.cc  G2_bones.cc  G2_misc.cc  G2_surfaces.cc  qgl.hh  tr_backend.cc  tr_ghoul2.cc  tr_init.cc  tr_local.h  tr_local.hh  tr_main.cc  tr_mesh.cc  tr_model.cc  tr_quicksprite.hh  tr_shader.cc  tr_shader.cpp  tr_skin.cc
src/rd-executor/: ex_init.cc  ex_local.hh  ex_model.cc  ex_shader.cc  ex_skin.cc  tr_init.cc  tr_local.hh  tr_subs.cc  tr_xcvar.inl  vk.inl  vk_device.cc  vk_instance.cc  vk_local.hh
src/rd-howler/: glad.cc  glad.hh  hmath.hh  hw_draw.cc  hw_init.cc  hw_instance.cc  hw_local.hh  hw_mesh.cc  hw_model.cc  hw_patch.cc  hw_program.cc  hw_shader.cc  hw_skin.cc  hw_state.cc  hw_texture.cc  hw_world.cc  hw_world_mesh.cc  tr_draw.cc  tr_init.cc  tr_local.hh  tr_model.cc  tr_shader.cc  tr_skin.cc  tr_subs.cc  tr_texture.cc  tr_world.cc  tr_xcvar.inl
src/rd-vanilla/: G2_API.cc  G2_bolts.cc  G2_bones.cc  G2_bones.cpp  G2_misc.cc  glad.c  glad.cpp  tr_WorldEffects.cc  tr_WorldEffects.cpp  tr_arb.cc  tr_arb.cpp  tr_backend.cc  tr_backend.cpp  tr_bsp.cc  tr_bsp.cpp  tr_cmds.cc  tr_cmds.cpp  tr_curve.cc  tr_decals.cc  tr_ghoul2.cc  tr_image.cc  tr_image.cpp  tr_init.cc  tr_init.cpp  tr_light.cc  tr_local.h  tr_local.hh  tr_main.cc  tr_main.cpp  tr_marks.cc  tr_mesh.cc  tr_model.cc  tr_quicksprite.cc  tr_quicksprite.cpp  tr_scene.cc  tr_scene.cpp  tr_shade.cc  tr_shade.cpp  tr_shade_calc.cc  tr_shade_calc.cpp  (+12 more)
src/ruby/: ruby.hh  ruby_core.cc
src/sdl/: sdl_input.cc  sdl_sound.cc  sdl_sound.hh  sdl_window.cc
src/server/: server.hh  sv_bot.cc  sv_ccmds.cc  sv_challenge.cc  sv_client.cc  sv_game.cc  sv_gameapi.cc  sv_gameapi.cpp  sv_init.cc  sv_main.cc  sv_net_chan.cc  sv_snapshot.cc  sv_world.cc
src/sys/: con_log.cc  con_passive.cc  con_tty.cc  con_tty.cpp  con_win32.cc  sys_event.cc  sys_local.hh  sys_main.cc  sys_main.cpp  (+6 more)
(+50 files in other folders)
